Fix link to open in a new tab for the testimonies, Fix overlaping footer with progress bar content in expertise page, Fix position of ackground image in about me page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -68,6 +68,7 @@
 .footer {
     color: #fafafa;
     background-color: #343A40;
+    padding: 0;
     
 }
 
@@ -188,6 +189,12 @@
   margin-left : 20px; 
   margin-bottom: 100px;
   height: auto;
+}
+
+.progress-grid {
+    margin-bottom:200px;
+    margin-top: 100px;
+
 }
 
 .progress-bar {
